# cmake_fetch_content_and_generator_expressions

./: CMakeLists.txt  README.md  clean.sh  setup.sh
Exe/: CMakeLists.txt
LibA/: CMakeLists.txt  tags
LibA/include/LibA/: Include.cmake
